--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "NODE_ENV=development node server.js",
+    "start": "NODE_ENV=production node server.js",
+    "db:migrate": "knex migrate:latest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,23 @@
   "bugs": {
     "url": "https://github.com/absmsn/testkit/issues"
   },
-  "homepage": "https://github.com/absmsn/testkit#readme"
+  "homepage": "https://github.com/absmsn/testkit#readme",
+  "dependencies": {
+    "config": "^3.3.1",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.21.1",
+    "koa": "^2.11.0",
+    "koa-bodyparser": "^4.3.0",
+    "koa-jwt": "^3.6.0",
+    "koa-router": "^8.0.8",
+    "koa2-cors": "^2.0.6",
+    "mysql2": "^2.1.0",
+    "pino": "^6.2.1",
+    "pino-pretty": "^4.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.0.0",
+    "jest": "^26.0.1",
+    "sqlite3": "^4.2.0"
+  }
 }
