--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "koa-router": "^8.0.8",
     "koa2-cors": "^2.0.6",
     "mysql2": "^2.1.0",
+    "nodemailer": "^6.4.6",
     "pino": "^6.2.1",
-    "pino-pretty": "^4.0.0"
+    "pino-pretty": "^4.0.0",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "eslint": "^7.0.0",
